--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ autobahn==0.13.1
 channels==0.11.0
 daphne==0.10.3
 Django==1.9.5
-django-crudbuilder==0.2.0
+django-crudbuilder==0.2.1
 django-extensions==1.6.1
 django-tables2==1.1.6
 gunicorn==19.4.5
 msgpack-python==0.4.7
 oauthlib==1.0.3
+Pillow==3.2.0
 redis==2.10.5
 requests==2.9.1
 requests-oauthlib==0.6.1
