--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==0.11.2
 autobahn==0.13.1
 channels==0.11.0
 daphne==0.10.3
+dj-database-url==0.4.1
 Django==1.9.5
 django-crudbuilder==0.2.1
 django-extensions==1.6.1
@@ -18,4 +19,5 @@ six==1.10.0
 Twisted==16.1.1
 txaio==2.3.1
 wheel==0.26.0
+whitenoise==3.0
 zope.interface==4.1.3
